--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: "My Jekyll Site"
 description: "A simple Jekyll site using GitHub Actions"
 theme: minima  # Use the theme of your choice
-minima:
-  skin: dark
+sass:
+  style: compressed
+
